SAP Translation Hub Translation Update
Change-Id: I434919d8be6aafcb73a5862a358c36f4a6685ad2

--- a/i18n_fr.properties
+++ b/i18n_fr.properties
@@ -1,11 +1,11 @@
-appTitle=Rapports standard nationaux (CSR)
+appTitle=Coun­try Stan­dard Reports (CSR)
 shortTitle=CSR
 masterListNoDataText=Aucun menu
 errorText=Erreur \:
 reportsTitle=Exécuter un rapport
 logsTitle=Protocoles doc. sur les substances
 variantsTitle=Variantes
-detailTxt=Bienvenue dans les rapports standard nationaux
+detailTxt=Bienvenue dans Coun­try Stan­dard Reports
 selOption=Sélectionnez une option dans le menu.
 infoLink=Si vous avez besoin d'aide avec l'application, accédez à
 dateSelection=Date début job
