--- a/i18n_nl.properties
+++ b/i18n_nl.properties
@@ -1,11 +1,11 @@
-appTitle=Landenstandaardrapporten (CSR)
-shortTitle=MVO
+appTitle=Coun­try Stan­dard Reports (CSR)
+shortTitle=CSR
 masterListNoDataText=Geen menu
 errorText=Fout\:
 reportsTitle=Rapport uitvoeren
 logsTitle=Rapportverslagen
 variantsTitle=Varianten
-detailTxt=Welkom bij standaardrapporten voor landen
+detailTxt=Welkom bij Coun­try Stan­dard Reports
 selOption=Selecteer een optie in het menu.
 infoLink=Als u hulp nodig hebt met de app, gaat u naar
 dateSelection=Startdatum job
